# virtualization

./: .dmtlint.yaml  .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .golangci.yaml  .helmignore  .prettierignore  .shellcheckrc  .sourcery.yaml  CHANGELOG.md  CONTRIBUTING.md  Chart.yaml  DEVELOPMENT.md  MAINTAINERS.md  Makefile  NEW_PACKAGES_SUMMARY.md  README.md  Taskfile.cve.yaml  Taskfile.cvmi.yaml  Taskfile.dist.yaml  Taskfile.my.yaml.example  Taskfile.vmi.yaml  Taskfile.yaml  conventional_commit_messages.md  docs.yaml  enabled  firmware.yaml  go.mod  go.sum  go.work  go.work.sum  known_vulnerabilities.vex  manifest  module.yaml  oss.yaml  rbac.yaml  release.yaml  tools.go  (+7 more)
.beads/: metadata.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  release.yml
.gitlab/: CODEOWNERS  README.md
.mirrord/: mirrord.json  mirrord_virtualization_api.json  security-policy-exception.yaml
.werf/: base-images-pins.yml  consts.yaml  images.yaml  packages.yaml  werf.inc.yaml
CHANGELOG/: CHANGELOG-v0.10-0.15.md  CHANGELOG-v0.14.md  CHANGELOG-v0.15.1.yml  CHANGELOG-v0.15.md  CHANGELOG-v0.16.0.yml  CHANGELOG-v0.16.1.yml  CHANGELOG-v0.16.md  CHANGELOG-v0.17.0.yml  CHANGELOG-v0.17.1.yml  CHANGELOG-v0.17.md  CHANGELOG-v0.18.0.yml  CHANGELOG-v0.18.1.yml  CHANGELOG-v0.18.2.yml  CHANGELOG-v0.18.md  CHANGELOG-v0.19.0.yml  CHANGELOG-v0.19.1.yml  CHANGELOG-v0.19.md  CHANGELOG-v0.20.0.yml  CHANGELOG-v0.20.1.yml  CHANGELOG-v0.20.2.yml  CHANGELOG-v0.20.md  CHANGELOG-v0.21.0.yml  (+69 more)
images/cdi-artifact/custom-build/: BUILD.bazel  build.sh
(+6018 files in other folders)
